2009-08-19  Noel O'Boyle  <baoilleach@gmail.com>

	* Windows Python build: Bump version to 1.5 and add support for Python
	3.1.

2009-08-18  Chris Morley

	* src/dlhandler_win32.cpp(getConvDirectory):changes which should affect
	only MSVC build. Get handle of this module, not the exe file. As found by
	Noel and by Mingyue Zheng this broke the Python bindings. 
	Correct the module name (different when debugging).
	OpenBabel2.2.3b_Windows_Installer.exe has this mod.
	
	* include/openbabel/dlhandler.h: minor doc change

2009-08-16  Chris Morley

	* windows-vc2005/Distribution/NSISScriptToCreateInstallerOBF.nsi
	Replace two instances of libinchi.dll with libstdinci.dll
	(The modified version was used for v2.2.3)

2009-08-01  Daniel Leidert  <daniel.leidert@wgdd.de>

	* doc/babel.1, doc/obchiral.1: Fixed "mdoc warning: Extraneous .Re".

2009-07-31  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* NEWS: Bump for 2.2.3 release.

2009-07-28  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/mmcifformat.cpp: Fix PR2824247 and 2824502,
	Contributed by Raik Brinkmann.

2009-07-28  Craig James <cjames@emolecules.com>

	* src/kekule.cpp Rewrote expand_kekule(), making it much simpler
	to understand.  Original algorithm had bugs and was very hard to
	follow.

2009-07-20  Chris Morley

	* src/formats/smilesformat.cpp: make the description of -xh more
	informative: it retains explicit hydrogen.
	
	* src/formats/fastsearchformat.cpp: in the second phase the SMARTS
	from both the -s option and (optionally) with -S from a file now
	retains its explicit hydrogen, to allow lack of substitution to be
	specified.
	
	* src/formats/xml/cmlformat.cpp: can now read vibrational
	frequencies and rotational constants as well as writing them.

2009-07-15  Daniel Leidert

	* configure.in: Fixed tr1/memory detection (broken in r3072).
	* doc/babel.1: Fixed hyphen used as minus sign.

2009-07-13  Chris Morley

	* src/formats/fingerprintformat.cpp: set initial nbits=0 (default)