@@ -1233,6 +1233,7 @@ namespace OpenBabel
     for (int i = 1; i < rl.Size() + 1; ++i, rotor = rl.NextRotor(ri)) // foreach rotor
       rotorKeys.AddRotor(rotor->GetResolution().size());
     
+    rotamers.AddRotamer(rotorKeys.GetKey());
     while (rotorKeys.Next()) 
       rotamers.AddRotamer(rotorKeys.GetKey());
 
